--- a/samples/android/mobileconnectsdksample/app/build.gradle
+++ b/samples/android/mobileconnectsdksample/app/build.gradle
@@ -2,10 +2,12 @@ apply plugin: 'com.android.application'
 
 repositories {
     maven { url "file://$projectDir/gallagher-mobile-access" }
+    maven { url "file://$projectDir/salto-justinmobile-sdk" }
 }
 
 android {
     compileSdkVersion 29
+    buildToolsVersion = '29.0.3'
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -16,8 +18,8 @@ android {
         applicationId "com.gallagher.mobileconnectsdksample.mobileconnectsdksample"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1400010
-        versionName "14.00.010"
+        versionCode 1501032
+        versionName "15.01.032"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -26,7 +28,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-	buildToolsVersion = '29.0.3'
 }
 
 // set the output file to be sample-app
@@ -39,20 +40,23 @@ android.applicationVariants.all { variant ->
 dependencies {
     implementation 'com.gallagher.security:gallaghermobileaccess:+'
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    // Salto JustIN Mobile SDK
+    implementation(group: 'com.saltosystems', name: 'salto-justinmobile-sdk', version: '3.0.2', ext: 'aar')
+    implementation(group: 'com.google.guava', name: 'guava', version: '29.0-android')
 
-    implementation 'com.github.tony19:logback-android-core:1.1.1-6'
-    implementation('com.github.tony19:logback-android-classic:1.1.1-6') {
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    implementation('com.github.tony19:logback-android:2.0.0') {
         exclude group: 'com.google.android', module: 'android'
     }
-    implementation 'org.slf4j:slf4j-api:1.7.29'
+    implementation 'org.slf4j:slf4j-api:1.7.30'
 
     testImplementation 'junit:junit:4.12'
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
