--- a/samples/android/mobileconnectsdksample/gradle/wrapper/gradle-wrapper.properties
+++ b/samples/android/mobileconnectsdksample/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Oct 30 17:39:22 NZDT 2019
+#Thu Nov 12 11:29:26 NZDT 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.3-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
