--- a/samples/server/nodejs/package.json
+++ b/samples/server/nodejs/package.json
@@ -9,11 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.88.0",
-    "sqlite3": "^4.0.6",
-    "express": "^4.16.4",
     "body-parser": "^1.18.3",
-    "ejs": "^2.7.1",
-    "express-ejs-layouts": "^2.5.0"
+    "ejs": "^3.1.8",
+    "express": "^4.16.4",
+    "express-ejs-layouts": "^2.5.0",
+    "request": "^2.88.0",
+    "sqlite3": "^4.0.6"
   }
 }
