Update to .NET 6 framework (#8)
* Migrated solution to .NET 6 framework.

* Cleaned up usings.

* Suggested cahnges from peer review.

* Updated "Mobile Connect SDK - Running the REST API sample integrations.pdf".

* Added undocumented.json to gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 docs/ios/sdk-docs/undocumented.json
+/.vs
+/samples/server/aspnet/.vs
+/samples/server/aspnet/obj
+/samples/server/aspnet/bin
+/samples/server/aspnet/Data/database.sqlitedb
+/samples/server/nodejs/node_modules
+/samples/server/nodejs/data
